test/ill-formed/unsupported/async_def.py
async def f():
    return 1
